--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,10 @@ dependencies:
   path_provider: ^2.0.14
   shared_preferences: ^2.2.0
   dropdown_search: ^5.0.6
-  flutter_email_sender: ^6.0.2
+  mailer: ^6.0.1
+
+
+
 
 
 
